pass first test case

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,5 +5,5 @@ file(GLOB_RECURSE all_files
 *.c
 *.C)
 
-# add_executable(mars-test ${all_files})
-# target_link_libraries(mars-test mars gtest gtest_main pthread)
+add_executable(mars-test ${all_files})
+target_link_libraries(mars-test gtest gtest_main pthread)
