--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,4 +6,4 @@ file(GLOB_RECURSE all_files
 *.C)
 
 add_executable(mars-test ${all_files})
-target_link_libraries(mars-test gtest gtest_main pthread)
+target_link_libraries(mars-test mars gtest gtest_main pthread)
